1. 更新 JWT 認證流程 2. 新增刷新令牌功能 3. 調整環境變數以支援 PostgreSQL 4. 優化 CORS 設定

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,18 @@
-HOST=localhost
+APP_NAME=vote
+HOST=https://localhost
 PORT=9443
 
-DB_CONFIG=vote:vote_password@tcp(mysql:3306)/vote?charset=utf8mb4&parseTime=True&loc=Local
+DB_CONFIG=postgres://vote:password@127.0.0.1:5432/vote
+GOOSE_DRIVER=postgres
+GOOSE_DBSTRING=postgres://vote:password@127.0.0.1:5432/vote
+GOOSE_MIGRATION_DIR=./app/database/migrations
+GOOSE_SEED_DIR=./app/database/seed
+
+JWT_SECRET_KEY=
+JWT_REFRESH_SECRET_KEY=
+
+ANON_PASSWORD_ENCRYPT_KEY=
+ANON_PASSWORD_ENCRYPT_IV=
 
 SMTP_HOST=
 SMTP_PORT=
@@ -10,14 +21,16 @@ SMTP_PASSWORD=
 SMTP_FROM=
 
 # Docker compose env
-DOCKER_BUILD_PLATFORM=
+DOCKER_BUILD_PLATFORM=linux/arm64
 
-DOCKER_MYSQL_ROOT_PASSWORD=password
-DOCKER_MYSQL_DATABASE=vote
-DOCKER_MYSQL_USER=vote
-DOCKER_MYSQL_PASSWORD=vote_password
+DOCKER_POSTGRES_DB=vote
+DOCKER_POSTGRES_USER=vote
+DOCKER_POSTGRES_PASSWORD=password
 
-DOCKER_DRONE_SERVER_HOST=https://domain/login
+DOCKER_PGADMIN_DEFAULT_EMAIL=vote@oxtomato.com
+DOCKER_PGADMIN_DEFAULT_PASSWORD=FoPJ4r41aHN312vKf24r
+
+DOCKER_DRONE_SERVER_HOST=
 DOCKER_DRONE_RPC_SECRET=
 DOCKER_DRONE_GITHUB_CLIENT_ID=
 DOCKER_DRONE_GITHUB_CLIENT_SECRET=
