feat: 修改投票使用gorutine處理

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_FROM=
 
+SMART_CONTRACT_PRIVATE_KEY=
+
 # Docker compose env
 DOCKER_BUILD_PLATFORM=linux/arm64
 
