✨ feat(graph): 新增問題和候選人相關的 GraphQL 類型和解析器
- 新增了問題（Question）和候選人（Candidate）的 GraphQL 類型定義，包括欄位和輸入類型。
- 實作了建立問題的變更解析器，支援建立新問題。
- 實作了查詢問題的解析器，支援分頁和候選人資訊的選項。
- 更新了全域 GraphQL 架構，新增了分頁資訊類型（PageInfo）和相關的輸入類型。

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ GOOSE_SEED_DIR=./app/database/seed
 JWT_SECRET_KEY=
 JWT_REFRESH_SECRET_KEY=
 
-VOTER_PASSWORD_ENCRYPT_KEY=
-VOTER_PASSWORD_ENCRYPT_IV=
+APP_ENCRYPT_KEY=
+APP_ENCRYPT_IV=
 
 SMTP_HOST=
 SMTP_PORT=
